--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cv",
-  "homepage": "https://serikovzhalgas.github.io/CV/",
+  "homepage": "https://serikovzhalgas.github.io/new-cv/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,8 +16,11 @@
     "react": "^18.2.0",
     "react-canvas-draw": "^1.2.1",
     "react-dom": "^18.2.0",
+    "react-particles": "^2.3.3",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-typing-effect": "^2.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
